--- a/CleanArch/CleanArch.MVC/appsettings.json
+++ b/CleanArch/CleanArch.MVC/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "CleanArchDBConnection": "Server=(localdb)\\mssqllocaldb;Database=CleanArchIdentityDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "CleanArchDBConnection": "Server=(localdb)\\mssqllocaldb;Database=CleanArchIdentityDB;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "UniversityDbConnection": "Server=msi;Database=UniversityDb;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
@@ -8,4 +9,4 @@
     }
   },
   "AllowedHosts": "*"
-}
+} 
