--- a/CleanArch/CleanArch.MVC/CleanArch.MVC.csproj
+++ b/CleanArch/CleanArch.MVC/CleanArch.MVC.csproj
@@ -15,6 +15,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\CleanArch.Infra.Data\CleanArch.Infra.Data.csproj" />
+    <ProjectReference Include="..\CleanArch.Infra.IOC\CleanArch.Infra.IOC.csproj" />
   </ItemGroup>
 
 </Project>
